monetdb4/modules/plain/Tests/alarm.stable.out.Windows
stdout of test 'alarm` in directory 'src/modules/plain` itself:


# 10:28:27 >  
# 10:28:27 >   Mserver "--config=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\conf\MonetDB.conf" --debug=10 --set "monet_mod_path=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\modules\plain\.libs;C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\modules\contrib\.libs;C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\modules\calibrator\.libs;C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\src\mapi\.libs" --set "gdk_dbfarm=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\dbfarm" --set "sql_logdir=C:\Documents and Settings\sjoerd\My Documents\src\devel\MonetDB\NT\log" --set mapi_port=42009 --set sql_port=53391 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < alarm.milM
# 10:28:27 >  

# Monet Database Server V4.5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# Compiled for i686-pc-win32/32bit; dynamically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module("alarm");

var t0 := time();
sleep(15);
var t1 := time();
print(((t1 - t0) + 500) / 1000);
[ 15 ]
alarm(15, "print(\"alarm went off\");" );
!ERROR: CMDalarm: not implemented
!ERROR: CMDalarm: operation failed.
printf("#~BeginVariableOutput~#\n");
#~BeginVariableOutput~#
timers().print();
#-----------------#
# alarm	action	  # name
# str	str	  # type
#-----------------#
time().print();
[ 15309 ]
usec().print();
[ 15309000 ]
epoch().print();
[ 1100683723 ]
ctime().print();
[ "Wed Nov 17 10:28:43 2004\n" ]
printf("#~EndVariableOutput~#\n");
#~EndVariableOutput~#
sleep(16); # wait for alarm

quit();

# 10:28:59 >  
# 10:28:59 >  Done.
# 10:28:59 >  

